--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with: { python-version: '3.11' }
-      - run: pip install ./backend.[test]
+      - run: cd backend && pip install .[test]
       - run: cd backend && pytest -q
   frontend:
     runs-on: ubuntu-latest
